--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,8 +1,2 @@
-compile.on.save=false
-do.depend=false
-do.jar=true
-do.jlink=false
-javac.debug=true
-javadoc.preview=true
-jlink.strip=false
-user.properties.file=C:\\Users\\jpant\\AppData\\Roaming\\NetBeans\\17\\build.properties
+compile.on.save=true
+user.properties.file=C:\\Users\\Usuario\\AppData\\Roaming\\NetBeans\\17\\build.properties
