--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -34,10 +34,12 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/BasesOF
 excludes=
 file.reference.postgresql-42.6.0.jar=C:\\Users\\jpant\\Downloads\\postgresql-42.6.0.jar
+file.reference.postgresql-42.6.0.jar-1=D:\\INFO USER C NO BORRAR\\Escritorio\\postgresql-42.6.0.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.postgresql-42.6.0.jar}
+    ${file.reference.postgresql-42.6.0.jar}:\
+    ${file.reference.postgresql-42.6.0.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
